--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    text-align: center;
         }
 
 .container {
@@ -36,7 +37,6 @@ p {
     font-size: 16px;
     color:#8B8B8B;
     text-indent: 1em;
-    text-align: center;
  
 }
 .odkazy {
@@ -104,6 +104,7 @@ button img {
      }
      .beach, .adventure{
         justify-content: center;
+        flex:0 0 calc(100% / 4)
      }
     .button1, .button2 {
         display: flex;
