--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body {
     margin:0px;
-    padding: 0px;
+    padding: 20px 60px;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
@@ -37,6 +37,7 @@ p {
     font-size: 16px;
     color:#8B8B8B;
     text-indent: 1em;
+    text-align: justify;
  
 }
 .odkazy {
