--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body {
     margin:0px;
-    padding: 20px 60px;
+    padding: 20px;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
